<resources>
    <string name="app_name">FileManager</string>
    <string name="permission_access_storage_expanation">We need your access to your storage.</string>
    <string name="ok">OK</string>

    <!--MAIN ACTIVITY-->
    <string name="main_leave">Press back again to leave</string>
    <string name="alert_dialog_default_positive">OK</string>
    <string name="alert_dialog_default_negative">Cancel</string>
    <string name="settings">Settings</string>
    <string name="default_folder">Default folder</string>
    <string name="summary_intent_preference">aaaa</string>

    <string name="movies_categories_key">categoriesKey</string>
    <string name="default_movies_categories">popular</string>
    <string name="action_delete">Delete</string>
    <string name="error">Error</string>
    <string name="open_file_with">Open %s with:</string>
    <string name="reload">Reload</string>
    <string name="internal_storage">Internal storage</string>
    <string name="root">Root</string>
    <string name="images">Images</string>
    <string name="music">Music</string>
    <string name="downloads">Download</string>
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="folder_is_empty">Folder is empty</string>
    <string name="set_default_folder">Set default folder</string>
    <string name="set_actual_folder_as_default">Set the current folder %s as the default? </string>
    <string name="home">Home</string>
</resources>
